--- a/dev_nexus/account/templates/base.html
+++ b/dev_nexus/account/templates/base.html
@@ -1,44 +1,70 @@
-{% load static %}
+{% load static %} 
+{% load utility_tags %} 
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <!-- Navbar ---->
-    <nav>
-        <div class="nav-wrapper teal lighten-2">
-            <a href="{% static 'imgs/logo.png' }" class="brand-logo">deVNexus</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#">People</a></li>
-            </ul>
-        </div>
-    </nav>
-    <!-- Content --->
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
-    <!-- Footer ---->
-    <footer class="page-footer teal lighten-2">
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="device-width=width, initial-scale=1.0">
+        <title>{% block title %}{% endblock %}</title> 
+        <!-- Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+icons" rel="stylesheet">
+        <!-- Materialize CSS-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/theme.css' %}">
+    </head>
+    <body>
+        <!-- NavBar -->
+        <nav>
+            <div class="nav-wrapper container">
+                <a class="brand-logo" href="/">
+                    Logo
+                </a>
+                <a href="#" class="sidenav-trigger" data-target="mobile-mav">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#">Images</a></li>
+                    <li><a href="#">People</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Side Nav-->
+        <ul class="sidenav" id="mobile-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="#">Images</a></li>
+            <li><a href="#">People</a></li>
+        </ul>
         <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5>deVneXus</h5>
-                    <p>Thanks for your support!</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5>Find us at</h5>
-                    <ul>
-                        
-                    </ul>
+            {% block content %}
+            {% endblock %}
+        </div>
+        <footer class="page-footer teal lighten-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5>deVneXus</h5>
+                        <p>Thanks for your support!</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5>Find us at</h5>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
-</body>
+        </footer>
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <!-- Materialize JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Sidenav function-->
+        <script>
+            $(document).ready(function(){
+                // Iniitalize sidenav
+                $('.sidenav').sidenav();
+            });
+        </script>
+        {% block custom_js %} 
+        {% endblock %} 
+    </body>
+</html>
